possible fix for unecessary scrolling on mobile when input is active

--- a/src/components/TaskList/taskList.module.scss
+++ b/src/components/TaskList/taskList.module.scss
@@ -3,7 +3,7 @@
 .taskList {
     width: 100%;
     max-width: 520px;
-    max-height: calc(100% - 156px);
+    max-height: calc(100dvh - 156px);
     overflow-y: auto;
     padding: 16px 0px;
 
